--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<ProtoT1 lang=en>
+<ProtoT1>
     <body>
         <h1>Links</h1>
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Click me hehe</a>
