--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <ProtoT1>
     <body>
-        <h1>Links</h1>
+        <h1>Click:</h1>
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Click me hehe</a>
         <p>WARNING: bo'lle of wa'er</p>
         <img src="bottle.jpg" alt="Image had trouble loading, please check your connection and try again" width="225" height="225">
