--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <title>croissants</title>
     </head>
     <body>
-        <h1 style="text-align:center;" style="color:darkslategrey;">Welcome</h1>
-        <h2 style="text-align:center;" style="color:grey;">Feel free to look around</h2>
-        <h2 style="text-align:left;" style="color:darkslategrey;">Types of croissants</h2>
+        <h1 style="text-align:center; color:darkslategray">Welcome</h1>
+        <h2 style="text-align:center; color:grey">Feel free to look around</h2>
+        <h2 style="text-align:left; color: darkslategray;">Types of croissants</h2>
         <hr>
         <ul style="text-align: left;">
             <li style="color:grey;">black</li>
