--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1 style="text-align:center; color:darkslategray">Welcome</h1>
-        <h2 style="text-align:center; color:grey">Feel free to look around</h2>
+        <h2 style="text-align:center; color:grey; "><i>Feel free to look around</i></h2>
         <h2 style="text-align:left; color: darkslategray;">Types of croissants</h2>
         <hr>
         <ul style="text-align: left;">
