--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang=en>
     <head>
-        <title>croissants</title>
+        <title>sus</title>
     </head>
     <body>
-        <h1 style="text-align:center; color:darkslategray">Welcome</h1>
+        <h1 style="text-align:center; color:darkslategray">Sus</h1>
         <h2 style="text-align:center; color:grey; "><i>Feel free to look around</i></h2>
         <h2 style="text-align:left; color: darkslategray;">Types of croissants</h2>
         <hr>
