--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
             <li style="color:grey;">orange</li>
             <li style="color:grey;">white</li>
         </ul>
+        <br>
+        <h2 style="text-align: left; color:darkslategrey">Croissant pictures</h2>
+        <img src="black croissant.jpg" alt=croissant height="500" width="700">
+        <img src="croissant.jpg" alt=croissant height="500" width="700">
+        <img src="white croissant.jpg" alt=croissant height="500" width="700">
     </body>
 </html>
