--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </ul>
         <br>
         <h2 style="text-align: left; color:darkslategrey">Croissant pictures</h2>
-        <img src="black croissant.jpg" alt=croissant height="500" width="700">
-        <img src="croissant.jpg" alt=croissant height="500" width="700">
-        <img src="white croissant.jpg" alt=croissant height="500" width="700">
+        <img src="pictures/black croissant.jpg" alt=croissant height="500" width="700">
+        <img src="pictures/croissant.jpg" alt=croissant height="500" width="700">
+        <img src="pictures/white croissant.jpg" alt=croissant height="500" width="700">
     </body>
 </html>
