--- a/index.html
+++ b/index.html
@@ -1,24 +1,9 @@
 <!DOCTYPE html>
 <html lang=en>
-    <head>
-        <title>sus</title>
-    </head>
+    <head>Blubvis725</head>
     <body>
-        <h1 style="text-align:center; color:darkslategray">Sus</h1>
-        <h2 style="text-align:center; color:grey; "><i>Feel free to look around</i></h2>
-        <h2 style="text-align:left; color: darkslategray;">Types of croissants</h2>
+        <h1 style="text-align:center">Projects</h1>
         <hr>
-        <ul style="text-align: left;">
-            <li style="color:grey;">black</li>
-            <li style="color:grey;">orange</li>
-            <li style="color:grey;">white</li>
-        </ul>
-        <br>
-        <h2 style="text-align: left; color:darkslategrey">Croissant pictures</h2>
-        <img src="pictures/black croissant.jpg" alt=croissant height="500" width="700">
-        <br>
-        <img src="pictures/croissant.jpg" alt=croissant height="500" width="700">
-        <br>
-        <img src="pictures/white croissant.jpg" alt=croissant height="500" width="700">
+        <a href="https://github.com/Blubvis725/ConsoleApps">ConsoleApps</a>
     </body>
 </html>
