--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang=en>
-    <head>Blubvis725</head>
-    <body>
-        <h1 style="text-align:center">Projects</h1>
-        <hr>
-        <a href="https://github.com/Blubvis725/ConsoleApps">ConsoleApps</a>
+    <head></head>
+    <body style="background-color: rgb(39, 48, 48)";>
+        <h1 style="text-align:center; color:rgb(201, 201, 201)">Projects</h1>
+        <hr style="color:rgb(201, 201, 201)">
+        <a style="color:rgb(201, 201, 201)"href="https://github.com/Blubvis725/ConsoleApps">ConsoleApps</a><p style="text-align:right; color:rgb(201, 201, 201)">2021Q4 (very unfinished)</p>
     </body>
 </html>
