--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <body style="background-color: rgb(39, 48, 48)";>
         <h1 style="text-align:center; color:rgb(201, 201, 201)">Projects</h1>
         <hr style="color:rgb(201, 201, 201)">
-        <a style="color:rgb(201, 201, 201)"href="https://github.com/Blubvis725/ConsoleApps">ConsoleApps</a><p style="text-align:right; color:rgb(201, 201, 201)">2021Q4 (very unfinished)</p>
+        <p style="text-align:right; color:rgb(201, 201, 201)"><a style="color:rgb(201, 201, 201)"href="https://github.com/Blubvis725/ConsoleApps">ConsoleApps</a>2021Q4 (very unfinished)</p>
     </body>
 </html>
